--- a/src/app/components/song-browser/song-browser.component.html
+++ b/src/app/components/song-browser/song-browser.component.html
@@ -1,4 +1,4 @@
-<search-bar></search-bar>
+<app-search-bar></app-search-bar>
 
 <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" (page)="pageEvent = $event">
 </mat-paginator>
