re-implement search functionality on angular

--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -2,7 +2,7 @@
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Filters...
+                Search...
             </mat-panel-title>
         </mat-expansion-panel-header>
         <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
