--- a/src/app/components/song-browser/song-browser.component.html
+++ b/src/app/components/song-browser/song-browser.component.html
@@ -11,7 +11,7 @@
     <ng-container matColumnDef="banner">
         <th mat-header-cell *matHeaderCellDef> Banner </th>
         <td mat-cell *matCellDef="let song">
-            <img src="../../assets/data/img/songid/{{song.id}}.jpg" width="120" height="60" />
+            <img src="assets/data/img/songid/{{song.id}}.jpg" width="120" height="60" />
         </td>
     </ng-container>
 
@@ -44,9 +44,9 @@
         <th mat-header-cell *matHeaderCellDef> Charts List </th>
         <td mat-cell *matCellDef="let song">
             <span *ngFor="let chart of song.chartList">
-                <img *ngIf="chart.chartType != 'coop' else coopChart" src="../../assets/data/img/level/{{chart.chartType | lowercase}}/{{chart.level}}.gif" [className]="useMobileUI? 'levelOrb-75' : 'levelOrb'">
+                <img *ngIf="chart.chartType != 'coop' else coopChart" src="assets/data/img/level/{{chart.chartType | lowercase}}/{{chart.level}}.gif" [className]="useMobileUI? 'levelOrb-75' : 'levelOrb'">
                 <ng-template #coopChart>
-                    <img src="../../assets/data/img/level/{{chart.chartType}}/{{chart.players}}.gif" [className]="useMobileUI? 'levelOrb-75' : 'levelOrb'">
+                    <img src="assets/data/img/level/{{chart.chartType}}/{{chart.players}}.gif" [className]="useMobileUI? 'levelOrb-75' : 'levelOrb'">
                 </ng-template>
             </span>
         </td>
