--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <span class="title">PIU Tool</span>
 </mat-toolbar>
 
-<mat-menu #menu="matMenu" xPosition="after" [overlapTrigger]="false">
+<mat-menu #menu="matMenu" xPosition="after" overlapTrigger="false">
     <button mat-menu-item [routerLink]="['/home']">
         <mat-icon>home</mat-icon>
         <span>Home</span>
