Updated angular to v15
This is might have changed the appearance of the website but it was made to make it easier for me to test and build future version

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<mat-card [routerLink]="['/song-browser']">
-    <mat-icon>pageview</mat-icon>
+<mat-card [routerLink]="['/song-browser']" class="mat-card">
+    <span class="material-icons">pageview</span>
     <mat-card-subtitle>Song Browser</mat-card-subtitle>
 </mat-card>
 
-<mat-card [routerLink]="['/randomizer']">
-    <mat-icon>shuffle</mat-icon>
+<mat-card [routerLink]="['/randomizer']" class="mat-card">
+    <span class="material-icons">shuffle</span>
     <mat-card-subtitle>Randomizer</mat-card-subtitle>
 </mat-card>
