--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,3 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~nouislider/distribute/nouislider.min.css';
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
